cmake_minimum_required(VERSION 3.9)
project(Poj)

set(CMAKE_CXX_STANDARD 98)

add_executable(Cows Cows.cpp)

add_executable(Tunnel-Warfare Tunnel-Warfare.cpp)

add_executable(MooFest MooFest.cpp)

add_executable(Apple-Tree Apple-Tree.cpp)

add_executable(True-Liars True-Liars.cpp)

add_executable(Rochambeau Rochambeau.cpp)

add_executable(Parity-Game Parity-Game.cpp)

add_executable(Food-Chain Food-Chain.cpp)

add_executable(Test Test.cpp)